--- a/JoyStick/platformio.ini
+++ b/JoyStick/platformio.ini
@@ -12,5 +12,5 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-upload_port = COM5
-serial_port = COM5
+
+upload.port = COM3
